# health-app

./: README.md  app.py  backend.py  clustered_with_labels.csv  feature_names.pkl  inspect_db.py  label_encoder.pkl  ml_service.py  pyproject.toml  requirements.txt  xgboost_classify_algorithm.py
static/css/: accessibility.css  style.css
static/js/: accessibility.js
templates/: about.html  base.html  home.html
