[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "health-app"
version = "0.1.0"
description = "A Flask-based Health Application"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask",
    "gower>=0.1.2",
    "joblib>=1.4.2",
    "matplotlib>=3.7.5",
    "pandas>=2.0.3",
    "pdfplumber>=0.11.5",
    "requests",
    "scikit-learn>=1.3.2",
    "werkzeug>=3.0.6",
    "xgboost>=2.1.4",
]

[tool.setuptools]
py-modules = ["app", "backend"]
